Add build_check branch server tests
COCOAサーバービルドをbuild_checkブランチも対象にする。

--- a/.github/workflows/CIserver.yml
+++ b/.github/workflows/CIserver.yml
@@ -5,13 +5,13 @@ name: CI-Server
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main, develop, 'feature/**' ]
+    branches: [ main, develop, 'feature/**', 'build_check/**'  ]
     paths:
       - 'src/**'
       - 'Covid19Radar.Functions.sln'
       - 'Covid19Radar.Functions.runsettings'
   pull_request:
-    branches: [ main, develop, 'feature/**' ]
+    branches: [ main, develop, 'feature/**', 'build_check/**'  ]
     paths:
       - 'src/**'
       - 'Covid19Radar.Functions.sln'
